Fix issue with hover when tooltip was hidden behind other layer

--- a/packages/exmg-tooltip/styles/exmg-tooltip-styles.scss
+++ b/packages/exmg-tooltip/styles/exmg-tooltip-styles.scss
@@ -26,4 +26,5 @@
 
 #tooltip.hidden {
   opacity: 0;
+  display: none;
 }
